--- a/app/public/index.html
+++ b/app/public/index.html
@@ -14,7 +14,7 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Simple twitter app on Solana. Built with Anchor and React."
+      content="Store your medical records safely on blockchain"
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
@@ -31,7 +31,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>Twitter on Solana</title>
+    <title>UHW - Universal Health Wallet</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
